B-F Sandbox Full-Backup/src/objects/Change_Set__c.object
<CustomObject>
    <description>A Change Request is a collection of objects moving to production on a given release day</description>
    <fields>
        <fullName>Admin_Access_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you need System Administrator access to finish the deployment of this Change Set. e.g. - Manual Approval Process, Profile Changes, etc ...</inlineHelpText>
        <label>Admin Access Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipName>Change_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biz_Process_Process_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for business process work.</description>
        <label>Biz Process Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Request_Name__c</fullName>
        <inlineHelpText>Enter the SalesForce Change Set Name</inlineHelpText>
        <label>SF Change Set Name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configuration_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for configuration.</description>
        <label>Configuration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Expected_On__c</fullName>
        <label>Date Expected On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Development_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for development.</description>
        <label>Development Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this change request need to be transported now, check this box.  Please note: an approval from force.com management will be required.</inlineHelpText>
        <label>Emergency Change?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infrastructure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <label>Release Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Releases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for information gathering.</description>
        <label>Requirements Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Design_Hours__c</fullName>
        <description>This field captures the additional LOE necessary for technical design.</description>
        <label>Tech Design Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tested_in_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this change been tested in the QA instance?</inlineHelpText>
        <label>Tested in QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Level_of_Effort__c</fullName>
        <description>This field sums up all LOE into the total number of hours for this change request.</description>
        <formula>Requirements_Hours__c + Biz_Process_Process_Hours__c + Tech_Design_Hours__c + Configuration_Hours__c + Development_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Level of Effort</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Application_Work_Package__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>AllChangeRequests</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Releases__c</columns>
        <columns>Admin_Access_Required__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Change Sets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Approved</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Change Requests Approved</label>
    </listViews>
    <listViews>
        <fullName>Change_Requests_Denied</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </filters>
        <label>Change Requests Denied</label>
    </listViews>
    <listViews>
        <fullName>My_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Level_of_Effort__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Change Requests</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Change Set ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Release</fullName>
        <active>true</active>
        <description>Change Request for the normal SFDC Release Schedule</description>
        <label>Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Admin_Access</fullName>
        <active>true</active>
        <description>If you need emergency System Administrator access</description>
        <label>System Admin Access</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tested_In_QA_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND ($RecordType.Name = &quot;Release&quot;,  Tested_in_QA__c  = false)</errorConditionFormula>
        <errorMessage>You must validate that you have tested in QA before created a Change Request.</errorMessage>
    </validationRules>
</CustomObject>